project/logs/20250512_164023.log
Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel　:　12.2

Complete create D3D12Device!!!

Begin CompileShader, path:Object3D.VS.hlsl, profile:vs_6_0

Object3D.VS.hlsl:8:8: error: redefinition of 'VertexShaderOutput'
struct VertexShaderOutput
       ^
./Object3d.hlsli:1:8: note: previous definition is here
struct VertexShaderOutput
       ^

